# ta-be-pn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  prometheus.yml  pyproject.toml  tox.ini
.github/workflows/: check.yaml
app/: main.py  models.py  routes.py  utils.py
app/db/: data.py
app/utils/: common.py  logger.py
backend/: .coveragerc  pyproject.toml
backend/app/: main.py  routes.py
backend/app/db/: data.py
backend/app/utils/: common.py
backend/docker/: Dockerfile
backend/load_tests/: test_routes_load.py
backend/tests/e2e_tests/: test_routes.py
backend/tests/unit_tests/app/: test_utils.py
backend/tests/unit_tests/app/db/: test_data.py
docker/: Dockerfile
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.js
frontend/app/src/components/: MobileCoverage.js
frontend/app/src/services/: api.js
frontend/docker/: Dockerfile
tests/app/: test_utils.py
tests/app/db/: test_data.py
